gitops/platform/wave-0/zot/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: zot
  namespace: registry
spec:
  hosts:
    - zot.opnsense.internal
  gateways:
    - istio-ingress/main
  http:
    - route:
        - destination:
            host: zot.registry.svc.cluster.local
            port:
              number: 5000
